objects/CN_Sales_Team__c.object
<CustomObject>
    <fields>
        <fullName>CN_Business_Unit_Code_Name__c</fullName>
        <label>Business Unit Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Business_Unit_Code__c</fullName>
        <formula>CN_Business_Unit__r.CN_Business_Unit_Code__c</formula>
        <label>Business Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Business_Unit_Name__c</fullName>
        <formula>CN_Business_Unit__r.Name</formula>
        <label>Business Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The business unit you choose must have business unit Code.</errorMessage>
            <filterItems>
                <field>CN_Business_Unit__c.CN_Business_Unit_Code__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CN_Business_Unit__c</referenceTo>
        <relationshipLabel>Sales Teams</relationshipLabel>
        <relationshipName>Sales_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_City_API__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Activated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Active__c</fullName>
        <formula>ISPICKVAL( CN_Sync_Status__c , &quot;Success&quot;) &amp;&amp;  CN_Is_Activated__c</formula>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team_Code__c</fullName>
        <externalId>true</externalId>
        <label>Sales Team Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <label>Sales Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Sales_Team_Code__c</columns>
        <columns>CN_Business_Unit__c</columns>
        <columns>CN_Business_Unit_Code_Name__c</columns>
        <columns>CN_Is_Activated__c</columns>
        <columns>CN_Sync_Status__c</columns>
        <columns>CN_Sync_Time__c</columns>
        <columns>CN_Sync_Error_Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Teams</pluralLabel>
    <recordTypes>
        <fullName>CN_Sales_Team</fullName>
        <active>true</active>
        <label>CN Sales Team</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>